horizontal scrolling avoided when resizing

--- a/src/components/Landing/landing.css
+++ b/src/components/Landing/landing.css
@@ -228,16 +228,7 @@
   .col-lg-12 {
     width: 100%;
   }
-  .program-card {
-    width: 19vw;
-    height: 450px;
-    background-color: white;
-    margin-left: 70px;
-    border-radius: 5px;
-    margin-top: -15px;
-    margin-bottom: 30px;
-    margin-right: 90px;
-  }
+ 
   .mission-name {
     color: #0645ad;
     margin-left: 25px;
@@ -268,7 +259,7 @@
     width: 200px;
     height: 500px;
     background-color: white;
-    margin-left: 30px;
+    margin-left: 20px;
     border-radius: 5px;
     margin-top: -30px;
   }
@@ -319,6 +310,21 @@
     margin-top: -5px;
     margin-bottom: 20px;
   }
+  .row {
+  width: 95%;
+  position: relative;
+  padding-right: 10px;
+}
+ .program-card {
+    width: 18vw;
+    height: 70vh;
+    background-color: white;
+    margin-left: 70px;
+    border-radius: 5px;
+    margin-top: -15px;
+    margin-bottom: 30px;
+    margin-right: 90px;
+  }
 }
 /************Tablet View***********/
 @media (min-width: 700px) and (max-width: 1024px) {
@@ -343,6 +349,7 @@
 
   .col-md-2 {
     width: 16.66%;
+    
   }
 
   .col-md-3 {
@@ -390,6 +397,7 @@
     margin-left: 20px;
     border-radius: 5px;
     margin-top: -30px;
+    
   }
   hr {
     height: 1px;
@@ -475,6 +483,9 @@
     margin-bottom: 15px;
     margin-left: auto;
     margin-right: auto;
+  }
+  .margin {
+  margin-left: -10px; 
   }
 }
 
